unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Production_Staff_Expenses__c.field-meta.xml
<CustomField>
    <fullName>conference360__Production_Staff_Expenses__c</fullName>
    <description>Actual spend on Production &amp; Staff for this Event. Populated automatically from related Budget &amp; Expense records but can be overridden if entered directly. Updates to B&amp;E records will overwrite manual field entries though.</description>
    <inlineHelpText>Actual spend on Production &amp; Staff for this Event. Populated automatically from related Budget &amp; Expense records but can be overridden if entered directly. Updates to B&amp;E records will overwrite manual field entries though.</inlineHelpText>
    <label>Production &amp; Staff Expenses</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>