unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Redirect_Button_Label__c.field-meta.xml
<CustomField>
    <fullName>conference360__Redirect_Button_Label__c</fullName>
    <description>When using a registration success message, you can set the button label here for the Registration Redirect URL.</description>
    <inlineHelpText>When using a registration success message, you can set the button label here for the Registration Redirect URL.</inlineHelpText>
    <label>Redirect Button Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>