unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Registration_End_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_End_Date__c</fullName>
    <description>Registration end date of the event.</description>
    <inlineHelpText>Registration end date of the event.</inlineHelpText>
    <label>Registration End Date(Deprecated)</label>
    <type>Date</type>
</CustomField>