unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Registration_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Registration_Start_Date__c</fullName>
    <description>Registration start date of the event.</description>
    <inlineHelpText>Registration start date of the event.</inlineHelpText>
    <label>Registration Start Date(Deprecated)</label>
    <type>Date</type>
</CustomField>