unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Remaining_Capacity__c.field-meta.xml
<CustomField>
    <fullName>conference360__Remaining_Capacity__c</fullName>
    <description>Attendee Limit minus Attendee Limit Buffer minus Registered.</description>
    <formula>if(conference360__Attendee_Limit__c &gt; 0,conference360__Attendee_Limit__c - conference360__Attendee_Limit_Buffer__c - conference360__Registered__c - conference360__Pending_Capacity__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Attendee Limit minus Attendee Limit Buffer minus Registered.</inlineHelpText>
    <label>Remaining Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>