unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Shipping_and_Handling__c.field-meta.xml
<CustomField>
    <fullName>conference360__Shipping_and_Handling__c</fullName>
    <label>Shipping and Handling</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>