unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Show_Event_Information__c.field-meta.xml
<CustomField>
    <fullName>conference360__Show_Event_Information__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Show Event Information</label>
    <type>Checkbox</type>
</CustomField>