unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Show_Gradient__c.field-meta.xml
<CustomField>
    <fullName>conference360__Show_Gradient__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Use Gradient</label>
    <type>Checkbox</type>
</CustomField>