unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Social_Message__c.field-meta.xml
<CustomField>
    <fullName>conference360__Social_Message__c</fullName>
    <label>Social Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>