unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Social_Sharing_URL__c.field-meta.xml
<CustomField>
    <fullName>conference360__Social_Sharing_URL__c</fullName>
    <description>The URL embedded in the social share buttons, generally used to reference the public event page.</description>
    <inlineHelpText>The URL embedded in the social share buttons, generally used to reference the public event page.</inlineHelpText>
    <label>Social Sharing URL</label>
    <type>Url</type>
</CustomField>