unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Sponsor_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>conference360__Sponsor_Balance_Due__c</fullName>
    <label>Sponsor Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>