unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Status__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <inlineHelpText>Internal status of this Event.</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>