unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Status_Formula__c.field-meta.xml
<CustomField>
    <fullName>conference360__Status_Formula__c</fullName>
    <description>The current status of your event, event item, or session.</description>
    <formula>if(TEXT(conference360__Status__c) ==&#39;Canceled&#39;,&#39;Canceled&#39;,if(TEXT(conference360__Status__c)==&#39;Completed&#39;,&#39;Event Ended&#39;,if(OR(NOT(conference360__Visible__c) , TEXT(conference360__Hide_Register_Button__c)==&#39;Yes&#39;),&#39;Disabled Event&#39;,if( conference360__Event_End_Date_Time_GMT__c  &lt; NOW(),&#39;Event Ended&#39; ,
    if(conference360__Remaining_Capacity__c&lt;=0 ,
        if(conference360__Waitlist_Enabled__c == false ,
            if(conference360__Waitlist_Enabled_On_EventItem__c==true,
                if(ISNULL(conference360__Waitlist_Capacity__c),&#39;Sold Out, Waitlist Open&#39;,if(conference360__Remaining_Waitlist_Capacity__c&lt;=0, &#39;Sold Out, Waitlist Closed&#39;,&#39;Sold Out, Waitlist Open&#39;)),
                if(OR(conference360__Remaining_Waitlist_Capacity__c&lt;=0,ISNULL(conference360__Remaining_Waitlist_Capacity__c)), &#39;Sold Out&#39;,&#39;Sold Out, Waitlist Open&#39;)
            ),
            if(OR(conference360__Remaining_Waitlist_Capacity__c &gt;0 , ISNULL(conference360__Remaining_Waitlist_Capacity__c)),&#39;Sold Out, Waitlist Open&#39;,&#39;Sold Out, Waitlist Closed&#39;)
        ),
        &#39;Event Active&#39;
    )
))))</formula>
    <inlineHelpText>The current status of your event, event item, or session.</inlineHelpText>
    <label>Status Formula</label>
    <type>Text</type>
</CustomField>