unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Tax__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax__c</fullName>
    <description>The tax from the overall registrations.</description>
    <inlineHelpText>The tax from the overall registrations.</inlineHelpText>
    <label>Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>