unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Tax_Fee__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Fee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Fee record used for Event tax calculations.</description>
    <inlineHelpText>Tax is applied to the total amount after discounts and before payment processing fees.</inlineHelpText>
    <label>Tax Fee</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>bt_stripe__Fee__c.bt_stripe__Type__c</field>
            <operation>equals</operation>
            <value>Tax</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>bt_stripe__Fee__c</referenceTo>
    <relationshipLabel>Events (Tax Fee)</relationshipLabel>
    <relationshipName>Events</relationshipName>
    <type>Lookup</type>
</CustomField>