unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Tax_Fee_Calculation_Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Tax_Fee_Calculation_Type__c</fullName>
    <description>The calculation type used for tax fees in Events.</description>
    <inlineHelpText>Defines whether Tax is inclusive or calculated at checkout. Determined by the associated Tax Fee.</inlineHelpText>
    <label>Tax Fee Calculation Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>