unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Ticket_Sales_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>conference360__Ticket_Sales_Start_Date__c</fullName>
    <description>Ticket sales start date for the event.</description>
    <inlineHelpText>Ticket sales start date for the event.</inlineHelpText>
    <label>Sales Start Date</label>
    <type>Date</type>
</CustomField>