unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Ticket_Sales_Start_Time__c.field-meta.xml
<CustomField>
    <fullName>conference360__Ticket_Sales_Start_Time__c</fullName>
    <description>Ticket sales start time for the event.</description>
    <inlineHelpText>Ticket sales start time for the event.</inlineHelpText>
    <label>Sales Start Time</label>
    <type>Time</type>
</CustomField>