unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Time_Display_Format__c.field-meta.xml
<CustomField>
    <fullName>conference360__Time_Display_Format__c</fullName>
    <label>Time Display Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12h</fullName>
            </value>
            <value>
                <fullName>24h</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>