unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>conference360__Time_Zone__c</fullName>
    <description>The time zone for this Event.</description>
    <inlineHelpText>The time zone for this Event.</inlineHelpText>
    <label>Time Zone</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Africa/Algiers</fullName>
            </value>
            <value>
                <fullName>Africa/Cairo</fullName>
            </value>
            <value>
                <fullName>Africa/Johannesburg</fullName>
            </value>
            <value>
                <fullName>Africa/Nairobi</fullName>
            </value>
            <value>
                <fullName>America/Anchorage</fullName>
            </value>
            <value>
                <fullName>America/Argentina/Buenos_Aires</fullName>
            </value>
            <value>
                <fullName>America/Bogota</fullName>
            </value>
            <value>
                <fullName>America/Caracas</fullName>
            </value>
            <value>
                <fullName>America/Chicago</fullName>
            </value>
            <value>
                <fullName>America/Denver</fullName>
            </value>
            <value>
                <fullName>America/El_Salvador</fullName>
            </value>
            <value>
                <fullName>America/Halifax</fullName>
            </value>
            <value>
                <fullName>America/Indiana/Indianapolis</fullName>
            </value>
            <value>
                <fullName>America/Lima</fullName>
            </value>
            <value>
                <fullName>America/Los_Angeles</fullName>
            </value>
            <value>
                <fullName>America/Mexico_City</fullName>
            </value>
            <value>
                <fullName>America/New_York</fullName>
                <default>true</default>
                <label>America/New_York</label>
            </value>
            <value>
                <fullName>America/Panama</fullName>
            </value>
            <value>
                <fullName>America/Phoenix</fullName>
            </value>
            <value>
                <fullName>America/Puerto_Rico</fullName>
            </value>
            <value>
                <fullName>America/Santiago</fullName>
            </value>
            <value>
                <fullName>America/Sao_Paulo</fullName>
            </value>
            <value>
                <fullName>America/St_Johns</fullName>
            </value>
            <value>
                <fullName>America/Tijuana</fullName>
            </value>
            <value>
                <fullName>Asia/Bangkok</fullName>
            </value>
            <value>
                <fullName>Asia/Colombo</fullName>
            </value>
            <value>
                <fullName>Asia/Dhaka</fullName>
            </value>
            <value>
                <fullName>Asia/Dubai</fullName>
            </value>
            <value>
                <fullName>Asia/Ho_Chi_Minh</fullName>
            </value>
            <value>
                <fullName>Asia/Hong_Kong</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>