unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Total_Budget__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Budget__c</fullName>
    <description>The Total Budget for this Event. Automatically calculated from related Budget fields, but can also be manually entered. Will be overridden by any updates to any Budget fields.</description>
    <inlineHelpText>The Total Budget for this Event. Automatically calculated from related Budget fields, but can also be manually entered. Will be overridden by any updates to any Budget fields.</inlineHelpText>
    <label>Total Budget</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>