unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Total_Discounts__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Discounts__c</fullName>
    <description>Total Discounts for all Attendees related to this Event.</description>
    <inlineHelpText>Total Discounts for all Attendees related to this Event.</inlineHelpText>
    <label>Total Discounts</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>