unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Total_Ticket_Revenue__c.field-meta.xml
<CustomField>
    <fullName>conference360__Total_Ticket_Revenue__c</fullName>
    <description>Total Ticket revenue for all Attendees related to this Event.</description>
    <inlineHelpText>Total Ticket revenue for all Attendees related to this Event.</inlineHelpText>
    <label>Total Ticket Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>