unpackaged/main/default/objects/conference360__Event__c/fields/conference360__UI_Experience__c.field-meta.xml
<CustomField>
    <fullName>conference360__UI_Experience__c</fullName>
    <label>UI Experience</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Tabbed</fullName>
            </value>
            <value>
                <fullName>Simple</fullName>
            </value>
            <value>
                <fullName>BYO-CSS</fullName>
            </value>
            <value>
                <fullName>Full-Width</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>