unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Update_Attendee_Counts__c.field-meta.xml
<CustomField>
    <fullName>conference360__Update_Attendee_Counts__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this field to kick off a Batch to update the Attendee Count fields on the record</inlineHelpText>
    <label>Update Attendee Counts</label>
    <type>Checkbox</type>
</CustomField>