unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Venue_Address_Geocodes__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_Address_Geocodes__c</fullName>
    <description>store the co-ordinates for the venue address</description>
    <inlineHelpText>store the co-ordinates for the venue address</inlineHelpText>
    <label>Venue Address Geocodes</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>