unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Venue_City__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_City__c</fullName>
    <description>The city for the Venue.</description>
    <inlineHelpText>The city for the Venue.</inlineHelpText>
    <label>Venue City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>