unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Venue_Name__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_Name__c</fullName>
    <description>The name of the Venue.</description>
    <inlineHelpText>The name of the Venue.</inlineHelpText>
    <label>Venue Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>