unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Venue_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_Postal_Code__c</fullName>
    <description>The postal code for the Venue.</description>
    <inlineHelpText>The postal code for the Venue.</inlineHelpText>
    <label>Venue Postal Code</label>
    <length>50</length>
    <type>Text</type>
</CustomField>