unpackaged/main/default/objects/conference360__Event__c/fields/conference360__Venue_State_Province__c.field-meta.xml
<CustomField>
    <fullName>conference360__Venue_State_Province__c</fullName>
    <description>The state or province for the Venue.</description>
    <inlineHelpText>The state or province for the Venue.</inlineHelpText>
    <label>Venue State/Province</label>
    <length>255</length>
    <type>Text</type>
</CustomField>